[tool.poetry]
name = "recordlinkage-util"
version = "0.1.0"
description = "Custom components for python recordlinkage toolkit package"
authors = ["Nadav Bismuth <nadavbi87@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
pandas = "^1.3.2"
recordlinkage = "^0.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
